--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,1 +1,26 @@
 <h1>tweet front </h1>
+
+  <%= form_for [@tweet] do |f| %>
+  <div class="form-group">
+    <%= f.text_area :description, placeholder: "留個言吧", class: "form-control"%>
+  </div>
+  <div class="form-group">
+    <%= f.submit class:" btn btn-primary"%>
+    <%= f.button "Cancel", type: :reset, class:"btn btn-default"%>
+  </div>
+  <% end %>
+
+
+<ul>
+  <% @tweets.each do |tweet|%>
+  <li>
+    <%= link_to tweet.user.name, users_path(tweet.user)%>
+    <%= tweet.description%>
+  </li>
+  <%end%>
+  <% @users.each do |user|%>
+  <li>
+    <%= link_to user.name, users_path(user)%>
+  </li>
+  <%end%>
+</ul>
