--- a/app/views/admin/tweets/index.html.erb
+++ b/app/views/admin/tweets/index.html.erb
@@ -1,1 +1,25 @@
-<h1> twwet back </h1>
+<h1> tweet back </h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+<ul>
+  <% @tweets.each do |tweet|%>
+  <li>
+    <%= link_to tweet.user.name, users_path(tweet.user)%>
+    <%= tweet.description%>
+    <%= link_to "Delete", admin_tweet_path(tweet), class: "btn btn-danger", method: :delete, data: {confirm:"Are you sure?"}%>
+  </li>
+  <%end%>
+
+  <% @users.each do |user|%>
+  <li>
+    <%= link_to user.name, users_path(user)%>
+  </li>
+  <%end%>
+</ul>
+<div class="text-center">
+  <%= paginate @tweets %>
+</div>
+</div>
+</div>
+</div>
