--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,26 +1,42 @@
-<h1>tweet front </h1>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-md-8">
+        <%= form_for [@tweet] do |f| %>
+          <div class="form-group">
+            <%= f.text_area :description, placeholder: "留個言吧", class: "form-control"%>
+          </div>
+          <div class="form-group">
+            <%= f.submit"Tweet", class:" btn btn-primary"%>
+            <%= f.button "Cancel", type: :reset, class:"btn btn-default"%>
+          </div>
+        <% end %>
+        <% @tweets.each do |tweet|%>
+        <div class="panel panel-default">
+          <div class="panel-body">
 
-  <%= form_for [@tweet] do |f| %>
-  <div class="form-group">
-    <%= f.text_area :description, placeholder: "留個言吧", class: "form-control"%>
+            <%= image_tag tweet.user.avatar, height: 100, width: 100%>
+
+
+
+              <h3><%= link_to tweet.user.name, users_path(tweet.user)%></h3>
+              <p><%= tweet.description%></p>
+              <%= link_to "Reply",tweet_replies_path(tweet)%>
+              <%= tweet.replies.count%>
+              <%= render partial: "shared/like", locals: {tweet: tweet}%>
+              <%= tweet.likes.count%>
+          </div>
+
+        </div>
+        <%end%>
+      </div>
+      <div class="col-xs-6 col-md-4">
+        <ul>
+        <% @users.each do |user|%>
+          <li>
+            <%= link_to user.name, users_path(user)%>
+          </li>
+        <%end%>
+        </ul>
+      </div>
+    </div>
   </div>
-  <div class="form-group">
-    <%= f.submit class:" btn btn-primary"%>
-    <%= f.button "Cancel", type: :reset, class:"btn btn-default"%>
-  </div>
-  <% end %>
-
-
-<ul>
-  <% @tweets.each do |tweet|%>
-  <li>
-    <%= link_to tweet.user.name, users_path(tweet.user)%>
-    <%= tweet.description%>
-  </li>
-  <%end%>
-  <% @users.each do |user|%>
-  <li>
-    <%= link_to user.name, users_path(user)%>
-  </li>
-  <%end%>
-</ul>
