add like link in user page

--- a/app/views/shared/_user.html.erb
+++ b/app/views/shared/_user.html.erb
@@ -2,18 +2,18 @@
   <%= image_tag @user.avatar, width: 300, height: 300%>
   <h2><%= @user.name%></h2>
   <p><%= @user.introduction%></p>
-  <h4>Tweets <%= @user.tweets.count%></h4>
+  <h4><%= link_to 'Tweets', tweets_user_path(@user)%> <%= @user.tweets.count%></h4>
   <br>
-  <h4>Followings <%= @user.followings.count%></h4>
+  <h4><%= link_to 'Followings', followings_user_path(@user)%> <%= @user.followings.count%></h4>
   <br>
-  <h4>Followers <%= @user.followers.count%></h4>
+  <h4><%= link_to 'Followers', followers_user_path(@user)%> <%= @user.followers.count%></h4>
   <br>
-  <h4>Likes <%= @user.likes.count%></h4>
+  <h4><%= link_to 'Likes', likes_user_path(@user)%> <%= @user.likes.count%></h4>
   <div class="text-center">
     <% if @user.email == current_user.email %>
      <%= link_to 'Edit Profile', edit_user_path(@user), class: "btn btn-primary"%>
     <%else%>
-     <%= link_to 'Follow', followships_path(@user), class: "btn btn-primary"%>
+       <%= render partial: "shared/follow", locals: {user: @user}%>
     <% end %>
   </div>
 </div>
