--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,6 +1,6 @@
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-md-8">
+      <div class="col-xs-11 col-md-7">
         <%= form_for [@tweet] do |f| %>
           <div class="form-group">
             <%= f.text_area :description, placeholder: "留個言吧", class: "form-control"%>
@@ -26,13 +26,23 @@
         </div>
         <%end%>
       </div>
-      <div class="col-xs-6 col-md-4">
-        <ul>
+      <div class="col-xs-7 col-md-5">
+        <h2>Popular</h2>
         <% @users.each do |user|%>
-          <li>
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <%= image_tag user.avatar, height: 100, width: 100%>
             <%= link_to user.name, users_path(user)%>
-          </li>
+            <p><%= truncate(user.introduction, length: 80) %></p>
+            <%if current_user.is_following?(user)%>
+              <%= link_to 'Unfollow', followship_path(user), method: :delete, class:"btn btn-link"%>
+            <%else%>
+              <%= link_to 'Follow',followships_path(following_id: user), method: :post, class:"btn btn-default" %>
+            <% end %>
+          </div>
+        </div>
         <%end%>
+
         </ul>
       </div>
     </div>
