--- a/app/views/replies/index.html.erb
+++ b/app/views/replies/index.html.erb
@@ -5,8 +5,10 @@
       <h2>Tweets</h2>
       <div class="panel panel-default">
         <div class="panel-body">
-          <%= image_tag @tweet.user.avatar, height: 100, width: 100%>
-          <h3><%= link_to @tweet.user.name, users_path(@tweet.user)%></h3>
+          <div class="col-xs-4 col-md-3">
+            <%= image_tag @tweet.user.avatar, height: 100, width: 100%>
+          </div>
+          <h4><%= link_to @tweet.user.name, users_path(@tweet.user)%>, <%= @tweet.created_at.to_date %>, <%= @tweet.created_at.strftime("%I:%M%p") %></h4>
           <p><%= @tweet.description%></p>
           <%= link_to "Reply",tweet_replies_path(@tweet)%>
           <%= @tweet.replies.count%>
@@ -19,8 +21,10 @@
       <% @tweet.replies.each do |reply| %>
       <div class="panel panel-default">
         <div class="panel-body">
-          <%= image_tag reply.user.avatar, height: 100, width: 100%>
-          <h3><%= link_to reply.user.name, users_path(@tweet.user)%></h3>
+          <div class="col-xs-4 col-md-3">
+            <%= image_tag reply.user.avatar, height: 100, width: 100%>
+          </div>
+          <h3><%= link_to reply.user.name, users_path(@tweet.user)%>, <%= reply.created_at.to_date %>, <%= reply.created_at.strftime("%I:%M%p") %></h3>
           <p><%= reply.comment%></p>
         </div>
       </div>
