--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -3,24 +3,25 @@
       <div class="col-xs-11 col-md-7">
         <%= form_for [@tweet] do |f| %>
           <div class="form-group">
-            <%= f.text_area :description, placeholder: "留個言吧", class: "form-control"%>
+            <%= f.text_area :description, placeholder: "What's on your mind?", class: "form-control",rows:"7"%>
           </div>
           <div class="form-group">
             <%= f.submit"Tweet", class:" btn btn-primary"%>
-            <%= f.button "Cancel", type: :reset, class:"btn btn-default"%>
           </div>
         <% end %>
         <% @tweets.each do |tweet|%>
         <div class="panel panel-default">
           <div class="panel-body">
-
+            <div class="col-xs-4 col-md-3">
             <%= image_tag tweet.user.avatar, height: 100, width: 100%>
-            <h3><%= link_to tweet.user.name, tweets_user_path(tweet.user)%></h3>
+            </div>
+            <h4><%= link_to tweet.user.name, tweets_user_path(tweet.user)%>, <%= tweet.created_at.to_date %>, <%= tweet.created_at.strftime("%I:%M%p") %></h4>
             <p><%= tweet.description%></p>
             <%= link_to "Reply",tweet_replies_path(tweet)%>
             <%= tweet.replies.count%>
             <%= render partial: "shared/like", locals: {tweet: tweet}%>
             <%= tweet.likes.count%>
+
           </div>
 
         </div>
@@ -31,9 +32,13 @@
         <% @users.each do |user|%>
         <div class="panel panel-default">
           <div class="panel-body">
+            <div class="col-xs-4 col-md-4">
             <%= image_tag user.avatar, height: 100, width: 100%>
+            </div>
+
             <%= link_to user.name, users_path(user)%>
             <p><%= truncate(user.introduction, length: 80) %></p>
+
             <%if current_user.is_following?(user)%>
               <%= link_to 'Unfollow', followship_path(user), method: :delete, class:"btn btn-link"%>
             <%else%>
