--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -1,13 +1,15 @@
 <div class="container">
   <div class="row">
     <%= render partial: "shared/user"%>
-    <div class="col-xs-12 col-md-8">
+    <div class="col-xs-13 col-md-9">
       <h2>Follower</h2>
       <% @followers.each do |follower|%>
         <div class="col-xs-8 col-md-6">
           <div class="panel panel-default">
             <div class="panel-body">
-              <%= image_tag follower.avatar, height: 100, width: 100%>
+              <div class="col-xs-4 col-md-4">
+                <%= image_tag follower.avatar, height: 100, width: 100%>
+              </div>
               <h3><%= link_to follower.name, tweets_user_path(follower)%></h3>
               <p><%= truncate(follower.introduction, length: 80) %></p>
               <%if current_user.is_following?(follower)%>
