--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,7 +3,7 @@
     <div class="col-xs-6 col-md-4">
       <%= image_tag @user.avatar, width: 300, height: 300%>
       <br>
-      
+
       <%= form_for @user do |f|%>
       <%= f.file_field :avatar , class: "btn btn-primary" %>
       <%end%>
@@ -11,10 +11,10 @@
     <div class="col-xs-12 col-md-8">
       <%= form_for @user do |f|%>
       <div class="form-group">
-        <%= f.text_area :name, placeholder:"Name", class:"form-control"%>
+        <%= f.text_area :name, placeholder:"Name", class:"form-control",rows:"3"%>
       </div>
       <div class="form-group">
-        <%= f.text_area :introduction, placeholder:"Type anything about you here....", class:"form-control"%>
+        <%= f.text_area :introduction, placeholder:"Type anything about you here....", class:"form-control",rows:"11"%>
       </div>
       <div class="form-group">
         <%= f.submit"Update", class:" btn btn-primary"%>
