--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-default">
+    <nav class="navbar-fixed-top navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -18,7 +18,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to "logo", root_path, class:"navbar-brand"%>
+          <%= link_to "LOGO", root_path, class:"navbar-brand"%>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -27,8 +27,9 @@
               <% if current_user&.admin? %>
                 <li><%= link_to 'Admin Panel', admin_root_path %></li>
               <% end %>
-              <li><%= link_to image_tag(current_user.avatar), users_path%></li>
-              <li><%= link_to('登出', destroy_user_session_path, method: :delete) %></li>
+              <li><%=image_tag current_user.avatar, width:'60px', height:'60px'%></li>
+
+              <li><%= link_to('Logout', destroy_user_session_path, method: :delete)%></li>
               <li><%= link_to('修改個人資料', edit_user_path(current_user)) %></li>
               <li><%= link_to('修改密碼', edit_user_registration_path) %></li>
             <% else %>
