--- a/app/views/replies/index.html.erb
+++ b/app/views/replies/index.html.erb
@@ -10,13 +10,17 @@
           </div>
           <h4><%= link_to @tweet.user.name, users_path(@tweet.user)%>, <%= @tweet.created_at.to_date %>, <%= @tweet.created_at.strftime("%I:%M%p") %></h4>
           <p><%= @tweet.description%></p>
-          <%= link_to "Reply",tweet_replies_path(@tweet)%>
-          <%= @tweet.replies.count%>
+          <div class="reply-color">
+            <%= link_to "Reply",tweet_replies_path(@tweet), class:"reply-color"%>
+            (<%= @tweet.replies.count%>)
+          </div>
+          <div class="like-color">
           <%= render partial: "shared/like", locals: {tweet: @tweet}%>
-          <%= @tweet.likes.count%>
+          (<%= @tweet.likes.count%>)
+          </div>
         </div>
       </div>
-      <br>
+
       <h2>Replies</h2>
       <% @tweet.replies.each do |reply| %>
       <div class="panel panel-default">
@@ -24,18 +28,17 @@
           <div class="col-xs-4 col-md-3">
             <%= image_tag reply.user.avatar, height: 100, width: 100%>
           </div>
-          <h3><%= link_to reply.user.name, users_path(@tweet.user)%>, <%= reply.created_at.to_date %>, <%= reply.created_at.strftime("%I:%M%p") %></h3>
+          <h3><%= link_to reply.user.name, tweets_user_path(@tweet.user)%>, <%= reply.created_at.to_date %>, <%= reply.created_at.strftime("%I:%M%p") %></h3>
           <p><%= reply.comment%></p>
         </div>
       </div>
       <%end%>
       <%= form_for [@tweet, @reply] do |f| %>
         <div class="form-group">
-          <%= f.text_area :comment, placeholder: "留個言吧", class: "form-control"%>
+          <%= f.text_area :comment, placeholder: " ", class: "form-control",rows:"7"%>
         </div>
-        <div class="form-group">
-          <%= f.submit"Reply", class:" btn btn-primary"%>
-
+        <div class="form-group btn-right">
+          <%= f.submit"Reply", class:" btn"%>
         </div>
       <% end %>
 
