--- a/app/views/shared/_like.html.erb
+++ b/app/views/shared/_like.html.erb
@@ -1,6 +1,6 @@
 <%if tweet.is_liked?(current_user)%>
-  <%= link_to "Unlike", unlike_tweet_path(tweet), method: :post%>
+  <%= link_to "Unlike", unlike_tweet_path(tweet), method: :post, class:"like-color"%>
 <%else%>
-  <%= link_to "Like", like_tweet_path(tweet), method: :post%>
+  <%= link_to "Like", like_tweet_path(tweet), method: :post,class:"like-color"%>
 
 <%end%>
