--- a/app/views/shared/_user.html.erb
+++ b/app/views/shared/_user.html.erb
@@ -1,19 +1,22 @@
 <div class="col-xs-5 col-md-3">
   <%= image_tag @user.avatar, width: 200, height: 200%>
   <h2><%= @user.name%></h2>
-  <p><%= @user.introduction%></p>
-  <h4><%= link_to 'Tweets', tweets_user_path(@user)%> <%= @user.tweets.count%></h4>
-  <br>
-  <h4><%= link_to 'Followings', followings_user_path(@user)%> <%= @user.followings.count%></h4>
-  <br>
-  <h4><%= link_to 'Followers', followers_user_path(@user)%> <%= @user.followers.count%></h4>
-  <br>
-  <h4><%= link_to 'Likes', likes_user_path(@user)%> <%= @user.likes.count%></h4>
-  <div class="text-center">
+  <div class="user-page">
+
+    <p><%= @user.introduction%></p>
+
+    <h4><%= link_to 'Tweets', tweets_user_path(@user)%> <%= @user.tweets.count%></h4>
+    <h4><%= link_to 'Followings', followings_user_path(@user)%> <%= @user.followings.count%></h4>
+
+    <h4><%= link_to 'Followers', followers_user_path(@user)%> <%= @user.followers.count%></h4>
+
+    <h4><%= link_to 'Likes', likes_user_path(@user)%> <%= @user.likes.count%></h4>
+
     <% if @user.email == current_user.email %>
-     <%= link_to 'Edit Profile', edit_user_path(@user), class: "btn btn-primary"%>
+      <%= link_to 'Edit Profile', edit_user_path(@user), class: "btn btn-primary"%>
     <%else%>
-       <%= render partial: "shared/follow", locals: {user: @user}%>
+      <%= render partial: "shared/follow", locals: {user: @user}%>
     <% end %>
+
   </div>
 </div>
