--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -2,11 +2,15 @@
     <div class="row">
       <div class="col-xs-11 col-md-7">
         <%= form_for [@tweet] do |f| %>
-          <div class="form-group">
+          <div class="form-group ">
+            <div class="text-field">
             <%= f.text_area :description, placeholder: "What's on your mind?", class: "form-control",rows:"7"%>
+            </div>
           </div>
           <div class="form-group">
-            <%= f.submit"Tweet", class:" btn btn-primary"%>
+            <div class="btn-right">
+            <%= f.submit"Tweet", class:" btn"%>
+            </div>
           </div>
         <% end %>
         <% @tweets.each do |tweet|%>
@@ -17,13 +21,17 @@
             </div>
             <h4><%= link_to tweet.user.name, tweets_user_path(tweet.user)%>, <%= tweet.created_at.to_date %>, <%= tweet.created_at.strftime("%I:%M%p") %></h4>
             <p><%= tweet.description%></p>
-            <%= link_to "Reply",tweet_replies_path(tweet)%>
-            <%= tweet.replies.count%>
+
+            <div class="reply-color">
+              <%= link_to "Reply",tweet_replies_path(tweet), class:"reply-color"%>
+              (<%= tweet.replies.count%>)
+            </div>
+            <div class="like-color">
             <%= render partial: "shared/like", locals: {tweet: tweet}%>
-            <%= tweet.likes.count%>
-
-          </div>
-
+            (<%= tweet.likes.count%>)
+            </div>
+          
+        </div>
         </div>
         <%end%>
       </div>
