--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,15 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-6 col-md-4">
+      <div class="edit-img">
       <%= image_tag @user.avatar, width: 300, height: 300%>
-      <br>
+      </div>
 
       <%= form_for @user do |f|%>
-      <%= f.file_field :avatar , class: "btn btn-primary" %>
+      <div class="form-group">
+      <%= f.label :avatar, "Browse files"%>
+      <%= f.file_field :avatar %>
+      </div>
       <%end%>
     </div>
     <div class="col-xs-12 col-md-8">
@@ -16,8 +20,8 @@
       <div class="form-group">
         <%= f.text_area :introduction, placeholder:"Type anything about you here....", class:"form-control",rows:"11"%>
       </div>
-      <div class="form-group">
-        <%= f.submit"Update", class:" btn btn-primary"%>
+      <div class="form-group btn-right">
+        <%= f.submit"Update", class:" btn "%>
 
       </div>
       <%end%>
