--- a/app/views/users/followings.html.erb
+++ b/app/views/users/followings.html.erb
@@ -10,13 +10,18 @@
               <div class="col-xs-4 col-md-4">
                 <%= image_tag following.avatar, height: 100, width: 100%>
               </div>
+
               <h3><%= link_to following.name, tweets_user_path(following)%></h3>
               <p><%= truncate(following.introduction, length: 80) %></p>
+              <div class="btn-right">
               <%if current_user.is_following?(following)%>
-                <%= link_to 'Unfollow', followship_path(following), method: :delete, class:"btn btn-link"%>
+                <%= link_to 'Unfollow', followship_path(following), method: :delete, class:"btn"%>
               <%else%>
-                <%= link_to 'Follow',followships_path(following_id: following), method: :post, class:"btn btn-default" %>
+                <%= link_to 'Follow',followships_path(following_id: following), method: :post, class:"btn " %>
               <% end %>
+              </div>
+
+
             </div>
           </div>
         </div>
