turn unlike to red like

--- a/app/views/shared/_tweet.html.erb
+++ b/app/views/shared/_tweet.html.erb
@@ -11,10 +11,14 @@
         <%= link_to "Reply",tweet_replies_path(tweet), class:"reply-color"%>
         (<%= tweet.replies.count%>)
       </div>
-      <div class="like-color">
+      
       <%= render partial: "shared/like", locals: {tweet: tweet}%>
-      (<%= tweet.likes.count%>)
-      </div>
+      <%if tweet.is_liked?(current_user)%>
+        <div class="like-color">
+          (<%= tweet.likes.count%>)
+        </div>
+      <%end%>
+
     </div>
 
   </div>
