add admin tweet index with styled

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -70,3 +70,14 @@ h4{
   color: #6495ED;
   margin: 10px 0;
 }
+
+
+.admin-delete{
+  display: inline;
+  float: right;
+  font-size: 18px;
+}
+
+.admin-tweet{
+  display: inline;
+}
