login page styled with boostrap

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -102,5 +102,21 @@ h4{
   margin-top: 10px;
   margin-right: 5px;
   line-height: 40px;
-  
+}
+
+.panel-default > .admin-tweeter > .panel-heading{
+  background-color: #99FFFF;
+  font-weight: bold;
+}
+
+
+.panel-default > .log-in > .panel-heading > h3 {
+  text-align: center;
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.panel-default > .log-in > .panel-heading  {
+
+  background-color:#00BBFF
 }
