--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -32,6 +32,8 @@
               <div class="like-color">
                 (<%= tweet.likes.count%>)
               </div>
+            <%else%>
+                (<%= tweet.likes.count%>)
             <%end%>
             </div>
 
