change image tag code

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -17,7 +17,12 @@
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="col-xs-4 col-md-3">
-            <%= image_tag tweet.user.avatar, height: 100, width: 100%>
+              <% for id in 0..20 %>
+                <% if image_path(tweet.user.avatar).include?('/'+ 'user'+id.to_s+'.jpg') %>
+                  <%= image_tag('/avatar/'+'user'+id.to_s+'.jpg', height: 100, width: 100) %>
+                <% end %>
+              <% end %>
+          <!--  <%= image_tag tweet.user.avatar, height: 100, width: 100%> -->
             </div>
             <h4><%= link_to tweet.user.name, tweets_user_path(tweet.user)%>, <%= tweet.created_at.to_date %>, <%= tweet.created_at.strftime("%I:%M%p") %></h4>
             <p><%= tweet.description%></p>
