--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -16,15 +16,24 @@
         <% @tweets.each do |tweet|%>
         <div class="panel panel-default">
           <div class="panel-body">
+            <%= link_to tweets_user_path(tweet.user) do%>
             <div class="col-xs-4 col-md-3">
-              <% for id in 0..20 %>
-                <% if image_path(tweet.user.avatar).include?('/'+ 'user'+id.to_s+'.jpg') %>
-                  <%= image_tag('/avatar/'+'user'+id.to_s+'.jpg', height: 100, width: 100) %>
-                <% end %>
+              <% if tweet.user.avatar?%>
+                <% for id in 0..20 %>
+                  <% if image_path(tweet.user.avatar).include?('/'+ 'user'+id.to_s+'.jpg') %>
+                    <%= image_tag('/avatar/'+'user'+id.to_s+'.jpg', height: 100, width: 100) %>
+                  <% end %>
+                <%end%>
+              <%else%>
+                <%= image_tag "http://fakeimg.pl/100x100/BBBBBB/", class: "img-responsive img-rounded"%>
               <% end %>
-          <!--  <%= image_tag tweet.user.avatar, height: 100, width: 100%> -->
             </div>
-            <h4><%= link_to tweet.user.name, tweets_user_path(tweet.user)%>, <%= tweet.created_at.to_date %>, <%= tweet.created_at.strftime("%I:%M%p") %></h4>
+            <h4><%= tweet.user.name%>, <%= tweet.created_at.to_date %>, <%= tweet.created_at.strftime("%I:%M%p") %></h4>
+            <% end %>
+
+          <!--  <%= image_tag tweet.user.avatar, height: 100, width: 100%> -->
+
+
             <p><%= tweet.description%></p>
 
             <div class="reply-color">
