--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,13 @@
               <% if current_user&.admin? %>
                 <li><%= link_to 'Admin Panel', admin_root_path %></li>
               <% end %>
-              <li><%=image_tag current_user.avatar, width:'60px', height:'60px'%></li>
+              <li>
+                <% for id in 0..20 %>
+                  <% if image_path(current_user.avatar).include?('/'+ 'user'+id.to_s+'.jpg') %>
+                    <%= image_tag('/avatar/'+'user'+id.to_s+'.jpg', height: 60, width: 60) %>
+                  <% end %>
+                <%end%>                
+              </li>
 
               <li><%= link_to('Logout', destroy_user_session_path, method: :delete)%></li>
               <li><%= link_to('修改個人資料', edit_user_path(current_user)) %></li>
