--- a/app/views/replies/index.html.erb
+++ b/app/views/replies/index.html.erb
@@ -6,7 +6,12 @@
       <div class="panel panel-default">
         <div class="panel-body">
           <div class="col-xs-4 col-md-3">
-            <%= image_tag @tweet.user.avatar, height: 100, width: 100%>
+            <% for id in 0..20 %>
+              <% if image_path(@tweet.user.avatar).include?('/'+ 'user'+id.to_s+'.jpg') %>
+                <%= image_tag('/avatar/'+'user'+id.to_s+'.jpg', height: 100, width: 100) %>
+              <% end %>
+            <%end%>
+
           </div>
           <h4><%= link_to @tweet.user.name, users_path(@tweet.user)%>, <%= @tweet.created_at.to_date %>, <%= @tweet.created_at.strftime("%I:%M%p") %></h4>
           <p><%= @tweet.description%></p>
@@ -26,7 +31,11 @@
       <div class="panel panel-default">
         <div class="panel-body">
           <div class="col-xs-4 col-md-3">
-            <%= image_tag reply.user.avatar, height: 100, width: 100%>
+            <% for id in 0..20 %>
+              <% if image_path(reply.user.avatar).include?('/'+ 'user'+id.to_s+'.jpg') %>
+                <%= image_tag('/avatar/'+'user'+id.to_s+'.jpg', height: 100, width: 100) %>
+              <% end %>
+            <%end%>           
           </div>
           <h3><%= link_to reply.user.name, tweets_user_path(@tweet.user)%>, <%= reply.created_at.to_date %>, <%= reply.created_at.strftime("%I:%M%p") %></h3>
           <p><%= reply.comment%></p>
