--- a/app/views/users/followings.html.erb
+++ b/app/views/users/followings.html.erb
@@ -8,7 +8,11 @@
           <div class="panel panel-default">
             <div class="panel-body">
               <div class="col-xs-4 col-md-4">
-                <%= image_tag following.avatar, height: 100, width: 100%>
+                <% for id in 0..20 %>
+                  <% if image_path(following.avatar).include?('/'+ 'user'+id.to_s+'.jpg') %>
+                    <%= image_tag('/avatar/'+'user'+id.to_s+'.jpg', height: 100, width: 100) %>
+                  <% end %>
+                <%end%>                
               </div>
 
               <h3><%= link_to following.name, tweets_user_path(following)%></h3>
