--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -8,7 +8,11 @@
           <div class="panel panel-default">
             <div class="panel-body">
               <div class="col-xs-4 col-md-3">
-              <%= image_tag like.user.avatar, height: 100, width: 100%>
+                <% for id in 0..20 %>
+                  <% if image_path(like.user.avatar).include?('/'+ 'user'+id.to_s+'.jpg') %>
+                    <%= image_tag('/avatar/'+'user'+id.to_s+'.jpg', height: 100, width: 100) %>
+                  <% end %>
+                <%end%>
               </div>
               <h4><%= link_to like.user.name, tweets_user_path(like.user)%>, <%= like.created_at.to_date %>, <%= like.created_at.strftime("%I:%M%p") %></h4>
               <p><%= like.description %></p>
