--- a/app/views/admin/tweets/index.html.erb
+++ b/app/views/admin/tweets/index.html.erb
@@ -40,6 +40,8 @@
               <div class="like-color">
                 (<%= tweet.likes.count%>)
               </div>
+            <%else%>
+                (<%= tweet.likes.count%>)
             <%end%>
           </div>
           <div class="admin-delete">
