--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -19,11 +19,11 @@
             <%= link_to tweets_user_path(tweet.user) do%>
             <div class="col-xs-4 col-md-3">
             <!--  <% if tweet.user.avatar?%> -->
-            <% for id in 0..20 %>
-              <% if image_path(tweet.user.avatar).include?('/'+ 'user'+id.to_s+'.jpg') %>
-                <%= image_tag('/avatar/'+'user'+id.to_s+'.jpg', height: 100, width: 100) %>
-              <% end %>
-            <%end%>
+                <% for id in 0..20 %>
+                  <% if image_path(tweet.user.avatar).include?('/'+ 'user'+id.to_s+'.jpg') %>
+                    <%= image_tag('/avatar/'+'user'+id.to_s+'.jpg', height: 100, width: 100) %>
+                  <% end %>
+                <%end%>
             <!--<%else%>
                 <%= image_tag "http://fakeimg.pl/100x100/BBBBBB/", class: "img-responsive img-rounded"%>
               <% end %> -->
@@ -62,6 +62,7 @@
           <div class="panel-body">
             <%= link_to tweets_user_path(user) do%>
             <div class="col-xs-4 col-md-4">
+              <%= image_tag user.avatar, height: 100, width: 100%>
               <% for id in 0..20 %>
                 <% if image_path(user.avatar).include?('/'+ 'user'+id.to_s+'.jpg') %>
                   <%= image_tag('/avatar/'+'user'+id.to_s+'.jpg', height: 100, width: 100) %>
