--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
                   <% if image_path(current_user.avatar).include?('/'+ 'user'+id.to_s+'.jpg') %>
                     <%= image_tag('/avatar/'+'user'+id.to_s+'.jpg', height: 60, width: 60) %>
                   <% end %>
-                <%end%>                
+                <%end%>
               </li>
 
               <li><%= link_to('Logout', destroy_user_session_path, method: :delete)%></li>
@@ -41,6 +41,7 @@
             <% else %>
               <li><%= link_to('註冊', new_user_registration_path) %></li>
               <li><%= link_to('登入', new_user_session_path) %></li>
+              <li><%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %></li>
             <% end %>
           </ul>
         </div>
