add ajax effect on tweet page & reply page & like button & follow button

--- a/app/views/shared/_follow.html.erb
+++ b/app/views/shared/_follow.html.erb
@@ -1,5 +1,10 @@
-<%if current_user.is_following?(@user)%>
-  <%= link_to 'Unfollow', followship_path(@user), method: :delete, class:"btn btn-link"%>
+<%if current_user.is_following?(user)%>
+  <div id="user-<%= user.id%>" >
+    <%= link_to 'Unfollow', followship_path(user), remote: true, method: :delete, class:"btn btn-link"%>
+  </div>
 <%else%>
-  <%= link_to 'Follow',followships_path(following_id: @user), method: :post, class:"btn btn-default" %>
+  <div id="user-<%= user.id%>">
+    <%= link_to 'Follow',followships_path(following_id: user), remote: true, method: :post, class:"btn btn-default" %>
+  </div>
+
 <% end %>
