--- a/app/views/replies/index.html.erb
+++ b/app/views/replies/index.html.erb
@@ -15,35 +15,25 @@
           </div>
           <h4><%= link_to @tweet.user.name, users_path(@tweet.user)%>, <%= @tweet.created_at.to_date %>, <%= @tweet.created_at.strftime("%I:%M%p") %></h4>
           <p><%= @tweet.description%></p>
-          <div class="reply-color">
-            <%= link_to "Reply",tweet_replies_path(@tweet), class:"reply-color"%>
-            (<%= @tweet.replies.count%>)
-          </div>
           <div class="like-color">
-          <%= render partial: "shared/like", locals: {tweet: @tweet}%>
-          (<%= @tweet.likes.count%>)
+            <%= render partial: "shared/like", locals: {tweet: @tweet}%>
           </div>
         </div>
       </div>
 
-      <h2>Replies</h2>
-      <% @tweet.replies.each do |reply| %>
-      <div class="panel panel-default">
-        <div class="panel-body">
-          <div class="col-xs-4 col-md-3">
-            <% for id in 0..20 %>
-              <% if image_path(reply.user.avatar).include?('/'+ 'user'+id.to_s+'.jpg') %>
-                <%= image_tag('/avatar/'+'user'+id.to_s+'.jpg', height: 100, width: 100) %>
-              <% end %>
-            <%end%>           
-          </div>
-          <h3><%= link_to reply.user.name, tweets_user_path(@tweet.user)%>, <%= reply.created_at.to_date %>, <%= reply.created_at.strftime("%I:%M%p") %></h3>
-          <p><%= reply.comment%></p>
-        </div>
-      </div>
+      <% if @tweet.replies.count == 0 %>
+        <h2 id="replycount">Replies(0)</h2>
+      <%else%>
+        <h2 id="replycount">Replies(<%= @tweet.replies.count%>)</h2>
       <%end%>
-      <%= form_for [@tweet, @reply] do |f| %>
-        <div class="form-group">
+      <div id="replylist">
+        <% @tweet.replies.each do |reply| %>
+          <%= render partial: "shared/reply", locals: {reply: reply}%>
+        <%end%>
+      </div>
+
+      <%= form_for [@tweet, @reply],{remote: true} do |f| %>
+        <div class="form-group reply-new">
           <%= f.text_area :comment, placeholder: " ", class: "form-control",rows:"7"%>
         </div>
         <div class="form-group btn-right">
