--- a/app/views/shared/_tweet.html.erb
+++ b/app/views/shared/_tweet.html.erb
@@ -1,5 +1,5 @@
-<div class="col-xs-12 col-md-8">
-  <% @tweets.each do |tweet|%>
+
+
   <div class="panel panel-default">
     <div class="panel-body">
       <div class="col-xs-4 col-md-3">
@@ -8,26 +8,11 @@
             <%= image_tag('/avatar/'+'user'+id.to_s+'.jpg', height: 100, width: 100) %>
           <% end %>
         <%end%>
-
-    </div>
-      <h4><%= link_to tweet.user.name, users_path(tweet.user)%>, <%= tweet.created_at.to_date %>, <%= tweet.created_at.strftime("%I:%M%p") %></h4>
-      <p><%= tweet.description%></p>
-      <div class="reply-color">
-        <%= link_to "Reply",tweet_replies_path(tweet), class:"reply-color"%>
-        (<%= tweet.replies.count%>)
       </div>
-
-      <%= render partial: "shared/like", locals: {tweet: tweet}%>
-      <%if tweet.is_liked?(current_user)%>
-        <div class="like-color">
-          (<%= tweet.likes.count%>)
-        </div>
-      <%else%>
-          (<%= tweet.likes.count%>)
-      <%end%>
-
+      <h4><%= link_to tweet.user.name, tweets_user_path(tweet.user)%>, <%= tweet.created_at.to_date %>, <%= tweet.created_at.strftime("%I:%M%p") %></h4>
+      <p><%= tweet.description%></p>
+      <%= link_to "Reply(#{tweet.replies.count})",tweet_replies_path(tweet), class:"reply-color inline"%>
+      <%= render partial: "shared/like", locals: {tweet: tweet} %>
     </div>
 
   </div>
-  <%end%>
-</div>
