--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -15,13 +15,10 @@
                 <%end%>
               </div>
               <h3><%= link_to follower.name, tweets_user_path(follower)%></h3>
-              <p><%= truncate(follower.introduction, length: 80) %></p>
+              <p><%= truncate(follower.introduction, length: 50) %></p>
               <div class="btn-right">
-                <%if current_user.is_following?(follower)%>
-                  <%= link_to 'Unfollow', followship_path(follower), method: :delete, class:"btn "%>
-                <%else%>
-                  <%= link_to 'Follow',followships_path(following_id: follower), method: :post, class:"btn " %>
-                <% end %>
+                <%= render partial: "shared/follow", locals: {user: follower}%>
+
               </div>
             </div>
           </div>
